# personal-timeline

./: .env.example  .gitignore  COMPREHENSIVE_FEATURE_IMPLEMENTATION_STATUS.md  Dockerfile  Dockerfile.ai-services  Dockerfile.qa  Dockerfile.qa.simple  Dockerfile.simple  FEATURE_IMPLEMENTATION_STATUS.md  QUICK_START_GUIDE.md  README.md  SYSTEM_INTEGRATION_REPORT.md  TECHNICAL_QA_IMPLEMENTATION.md  USER_FEATURES_IMPLEMENTATION.md  VALUE_PROPOSITION_ANALYSIS.md  docker-compose.yml  pyproject.toml  start_app.sh
Revamp/: PROJECT_SUMMARY.md  Vision.md
config/: README.md  RESTART_DOCKER.sh  setup_dev_uv.sh  start_app.sh  teardown.sh  test_deployment.sh  test_services.sh  verify_docker_setup.sh  verify_enhanced_docker_setup.sh
docs/: AI_INTEGRATION_COMPLETE.md  CLASS_DIAGRAMS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCKER_AI_INTEGRATION.md  DOCKER_READY.md  DOCUMENTATION_INDEX.md  FACEBOOK_DATA_FIX.md  FACEBOOK_DATA_SETUP.md  FACEBOOK_TIMELINE_SPEC.md  FRONTEND_FIX.md  IMPLEMENTATION_PLAN.md  MODERNIZATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  RESILIENT_SOLUTION.md  RUN_LOCALLY.md  SUCCESS_SUMMARY.md  TROUBLESHOOTING_GUIDE.md
examples/: data_migration_demo.py  gallery_curation_demo.py  memory_resurfacing_demo.py  place_exploration_demo.py  privacy_safety_demo.py  self_reflection_demo.py
reports/: DEPLOYMENT_READY_REPORT.md  FINAL_TEST_REPORT.md  README.md  browser_test_report.json  complete_test_results.json  comprehensive_test_results.json  deployment_test_report.json  final_comprehensive_report.json  final_verification_results.json  functional_test_results.json  integration_test_results.json  real_functionality_results.json  real_user_experience_report.json  system_analysis_results.json  systematic_fixes_results.json  test_report.json  test_results.json  triple_verification_report.json  user_experience_report.json
scripts/: verify_enhanced_docker_setup.sh
src/: requirements.txt
test_data/: facebook_data.json
tests/: conftest.py  run_all_tests.py  test_agent_coordination.py  test_ai_model_integration.py  test_ai_provider_management.py  test_api_endpoints.py  test_contextual_memory_resurfacing.py  test_data_migration.py  test_data_processing.py  test_docker_config.py  test_docker_integration.py  test_enhanced_memory_retrieval.py  test_facebook_posts_processor.py  test_gallery_curation.py  test_memory_integration.py  (+7 more)
(+245 files in other folders)
